CHANGELOG RoundCube Webmail
---------------------------

2008/08/15 (thomasb)
----------
- Use current mailbox name in template (#1485256)
- Better fix for skipping untagged responses (#1485261)
- Added pspell support patch by Kris Steinhoff (#1483960)
- Enable spellchecker for HTML editor (#1485114)

2008/08/09 (alec)
----------
- Case insensitive contacts searching using PostgreSQL (#1485259)

2008/07/31 (thomasb)
----------
- Make default imap folders configurable for each user (#1485075)
- Save outgoing mail to selectable folder (#1324581)
- Fix hiding of mark menu when clicking th button again (#1484944)

2008/07/21 (alec)
----------
- use long date format in print mode (#1485191)

2008/07/18 (alec)
----------
- Updated TinyMCE to version 3.1.0.1

2008/07/14 (thomasb)
----------
- Re-enable autocomplete attribute for login form (#1485211)
- Check PERMANENTFLAGS before saving $MDNSent flag (#1484963, #1485163)

2008/06/30 (alec)
----------
- Added flag column on messages list (#1484623)

2008/06/24 (alec)
----------
- Patched Mail/MimePart.php (http://pear.php.net/bugs/bug.php?id=14232)

2008/06/24 (alec)
----------
- Allow trash/junk subfolders to be purged (#1485085)

2008/06/20 (alec)
----------
- Added Azerbaijani translation

2008/06/20 (thomasb)
----------
- Store compose parameters in session and redirect to a unique URL

2008/06/18 (thomasb)
----------
- Fixed CRAM-MD5 authentication (#1484819)
- Add fallback to old 'skin_path' property

2008/06/16 (alec)
----------
- Fixed sending emoticons
- Fixed forwarding messages with one HTML attachment (#1484442)
- Fixed encoding of message/rfc822 attachments and image/pjpeg handling (#1484914)

2008/06/15 (alec)
----------
- Added option to select skin in user preferences
  WARNING: option 'skin_path' replaced by 'skin' option!

2008/06/14 (alec)
----------
- Added option to disable displaying of attached images below the message body

2008/06/13 (alec)
----------